src/test/deca/syntax/valid/not_provided/fichier_non_utf8.deca
// Description:
//    Programme non utf-8: il est sauvegardé en ISO-8859-1.
//    Ce comportement n'est pas spécifié:
//    le choix de l'implémentation est au compilateur.
//    Nous choissions d'accepter ce programme.
//
// Resultats:
//    "Hello"
//
// Historique:
//    cree le 05/01/2022

{
    println("Hello");
}